# flux-foundry

./: .typos.toml  Makefile.am  README.md  autogen.sh  codecov.yml  configure.ac
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml  main.yml
debian/: control  copyright
doc/: Makefile.am  conf.py  index.rst  manpages.py
doc/man3/: flux_conf_create.rst  idset_decode.rst
doc/man3/common/: resources.rst
doc/test/: spell.en.pws
scripts/: configure-macos.sh  debbuild.sh  install-deps-deb.sh  install-deps-macos.sh
src/include/flux/: idset.h  types.h
src/libconf/: Makefile.am  conf.c  conf.h  conf_private.h  flux-conf.pc.in  tomltk.c  tomltk.h
src/libconf/test/: conf.c  tomltk.c
src/libhostlist/: Makefile.am  hostlist.c
src/libhostlist/test/: hostlist.c  hostname.c  hostrange.c  util.c
src/libidset/: Makefile.am  idset.h  idset_decode.c  idset_format.c  idset_private.h
src/libidset/test/: idset.c
src/libmissing/: Makefile.am  argz.h  argz_add.c  json_object_update_recursive.c  mempcpy.c  mempcpy.h
src/liboptparse/: Makefile.am  optparse.c
src/liboptparse/test/: optparse.c
src/libtaskmap/: Makefile.am  taskmap.c  taskmap.h  taskmap_private.h
src/libtaskmap/test/: taskmap.c
src/libutil/: Makefile.am  errprintf.h  lru_cache.c  types.h
src/libutil/test/: errprintf.c  fsd.c  parse_size.c  timestamp.c
src/test/: checks_run.sh  generate-matrix.py
src/test/docker/: docker-run-checks.sh
src/test/docker/checks/: Dockerfile
